Added EU Currencies API data for rate exchange
